--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
     <!-- 検索ボックス -->
     <div class="flex justify-between mb-4">
       <input id="searchInput" type="text" class="border p-2 w-full max-w-xs" placeholder="曲名やアーティストで検索">
-      
-      <!-- 並び替えボタン -->
       <button id="sortButton" class="ml-4 px-4 py-2 border rounded bg-blue-500 text-white">公開日で並び替え</button>
     </div>
     
@@ -102,16 +100,24 @@
     let allVideos = [];
     let currentIndex = -1;
 
-    function updateNowNextDisplay(videos, current, next) {
-      document.getElementById('nowPlaying').textContent = current ? `🎵 再生中: ${current}` : '🎵 再生中: -';
-      document.getElementById('nextUp').textContent = next ? `🎶 次: ${next}` : '🎶 次: -';
-    }
-
+    // 動画リストを表示
     function renderVideoList(videos) {
       const videoList = document.getElementById('videoList');
       videoList.innerHTML = '';
 
-      videos.forEach((video, index) => {
+      // 検索とフィルタリング機能を適用した動画表示
+      const searchInput = document.getElementById('searchInput').value.toLowerCase();
+      const categoryFilter = document.getElementById('categoryFilter').value;
+      const videoTypeFilter = document.getElementById('videoTypeFilter').value;
+
+      const filteredVideos = videos.filter(video => {
+        const matchesSearch = video["title"].toLowerCase().includes(searchInput) || video["artist"].toLowerCase().includes(searchInput);
+        const matchesCategory = categoryFilter ? video["カテゴリ"] === categoryFilter : true;
+        const matchesVideoType = videoTypeFilter ? video["動画種別"] === videoTypeFilter : true;
+        return matchesSearch && matchesCategory && matchesVideoType;
+      });
+
+      filteredVideos.forEach((video, index) => {
         const item = document.createElement('div');
         item.className = 'card p-4 bg-white border border-gray-200 rounded-lg shadow-md hover:shadow-xl transition-all';
 
@@ -138,6 +144,7 @@
       });
     }
 
+    // 動画データをロード
     function loadVideo(video, container) {
       const start = parseInt(video["start"] || '0');
       let videoId = video["videoId"];
@@ -162,6 +169,7 @@
       container.appendChild(template);
     }
 
+    // インデックス番号で動画を表示
     function loadVideoByIndex(index) {
       const videos = document.querySelectorAll('#videoList > div');
       if (index < 0 || index >= videos.length) return;
@@ -191,6 +199,7 @@
       currentIndex = index;
     }
 
+    // 次の動画を再生
     function playNext() {
       const isShuffle = document.getElementById('shuffleToggle').checked;
       const videos = document.querySelectorAll('#videoList > div');
@@ -201,4 +210,47 @@
         } while (next === currentIndex);
         loadVideoByIndex(next);
       } else {
-        let next
+        let nextIndex = currentIndex + 1;
+        if (nextIndex >= videos.length) {
+          if (document.getElementById('repeatToggle').checked) {
+            nextIndex = 0;
+          } else {
+            updateNowNextDisplay(videos, videos[currentIndex]?.querySelector('a')?.textContent, null);
+            return;
+          }
+        }
+        loadVideoByIndex(nextIndex);
+      }
+    }
+
+    // 初期データのロード
+    window.addEventListener('DOMContentLoaded', () => {
+      fetch(sheetJsonUrl)
+        .then(response => response.json())
+        .then(data => {
+          allVideos = data;  // スプレッドシートからのデータを格納
+          renderVideoList(data);  // リストを表示
+        });
+    });
+
+    // 検索のイベント
+    document.getElementById('searchInput').addEventListener('input', () => {
+      renderVideoList(allVideos);
+    });
+
+    // フィルターのイベント
+    document.getElementById('categoryFilter').addEventListener('change', () => {
+      renderVideoList(allVideos);
+    });
+    document.getElementById('videoTypeFilter').addEventListener('change', () => {
+      renderVideoList(allVideos);
+    });
+
+    // 並び替えボタンのイベント
+    document.getElementById('sortButton').addEventListener('click', () => {
+      allVideos.sort((a, b) => new Date(b["公開日"]) - new Date(a["公開日"]));
+      renderVideoList(allVideos);
+    });
+  </script>
+</body>
+</html>
