--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         transform: translateY(0);
       }
     }
+
+      /* 固定プレイヤー用のCSS */
+  #fixedPlayer {
+    display: none; /* 最初は非表示 */
+  }
   </style>
 </head>
 <body class="bg-white text-gray-800">
@@ -56,6 +61,15 @@
   </section>
 
   <main id="videoList" class="max-w-4xl mx-auto px-4 py-8 divide-y divide-gray-200"></main>
+
+  <!-- 固定プレイヤー -->
+<div id="fixedPlayer" class="fixed bottom-0 left-0 w-full bg-white border-t shadow-lg z-20">
+  <div class="max-w-4xl mx-auto p-4">
+    <div class="bg-black rounded-xl overflow-hidden shadow-lg">
+      <iframe id="playerIframe" class="w-full aspect-video" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
 
   <template id="videoPlayerTemplate">
     <div class="video-player-container w-full mt-4 fade-in">
@@ -185,31 +199,34 @@
         });
       }
 
-      function loadVideo(video, container) {
-        const start = parseInt(video["start"] || '0');
-        let videoId = video["videoId"];
-        const platform = video["platform"];
-        let embedUrl = "";
+function loadVideo(video, container) {
+  const start = parseInt(video["start"] || '0');
+  let videoId = video["videoId"];
+  const platform = video["platform"];
+  let embedUrl = "";
 
-        if (!videoId) return alert("videoId が指定されていません");
+  if (!videoId) return alert("videoId が指定されていません");
 
-        if (platform.toLowerCase().includes("youtube")) {
-          const match = videoId.match(/(?:v=|\/|youtu\.be\/)?([0-9A-Za-z_-]{11})/);
-          if (match) videoId = match[1];
-          embedUrl = `https://www.youtube.com/embed/${videoId}?start=${start}&autoplay=1`;
-        } else if (platform.toLowerCase() === "tiktok") {
-          const match = videoId.match(/video\/(\d+)/);
-          const tiktokId = match ? match[1] : videoId;
-          embedUrl = `https://www.tiktok.com/embed/v2/${tiktokId}`;
-        }
+  if (platform.toLowerCase().includes("youtube")) {
+    const match = videoId.match(/(?:v=|\/|youtu\.be\/)?([0-9A-Za-z_-]{11})/);
+    if (match) videoId = match[1];
+    embedUrl = `https://www.youtube.com/embed/${videoId}?start=${start}&autoplay=1`;
+  } else if (platform.toLowerCase() === "tiktok") {
+    const match = videoId.match(/video\/(\d+)/);
+    const tiktokId = match ? match[1] : videoId;
+    embedUrl = `https://www.tiktok.com/embed/v2/${tiktokId}`;
+  }
 
-        // Remove old embedded players
-        document.querySelectorAll('.video-player-container').forEach(el => el.remove());
+  // 固定プレイヤーに動画を設定
+  const fixedPlayer = document.getElementById('fixedPlayer');
+  const iframe = document.getElementById('playerIframe');
+  iframe.src = embedUrl;
+  fixedPlayer.style.display = 'block'; // プレイヤーを表示
 
-        const template = videoPlayerTemplate.content.cloneNode(true);
-        template.querySelector('iframe').src = embedUrl;
-        container.appendChild(template);
-      }
+  // 古い埋め込みプレイヤーを削除（固定プレイヤーを使うので他のプレイヤーは削除）
+  document.querySelectorAll('.video-player-container').forEach(el => el.remove());
+}
+
     });
   </script>
 </body>
