--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@ section {
   #fixedPlayer {
     display: none; /* 最初は非表示 */
   }
+
+/* 再生中の曲名表示部分 */
+#nowPlaying {
+  background-color: #e0f7fa;  /* 再生中の曲名に薄い青色背景 */
+  color: #00796b;
+  text-align: center;
+  padding: 10px;
+}
+
+/* リストアイテムの強調表示 */
+#videoList .playing {
+  background-color: #e0f7fa;  /* 再生中の項目に背景色を追加 */
+}
+
   </style>
 </head>
 <body class="bg-white text-gray-800">
