--- a/index.html
+++ b/index.html
@@ -26,6 +26,37 @@
       }
     }
 
+/* リスト項目のスタイル */
+#videoList div {
+  background-color: #e0f7fa;  /* 淡い青色 */
+  border: 2px solid #00796b;  /* 枠線の色 */
+  border-radius: 10px;  /* 角を丸める */
+  padding: 16px;
+  margin-bottom: 16px;  /* 各項目の下に余白 */
+  display: flex;
+  justify-content: space-between;  /* 左右に情報を配置 */
+  align-items: center;  /* 垂直方向のセンタリング */
+}
+
+/* 曲名とアーティスト名 */
+#videoList a {
+  font-size: 1.125rem;  /* 大きなフォントサイズ */
+  font-weight: 600;
+  color: #00796b;  /* 青緑色 */
+  text-decoration: none;
+}
+
+#videoList a:hover {
+  text-decoration: underline;  /* ホバー時に下線を追加 */
+}
+
+/* 詳細情報のスタイル */
+#videoList .text-sm {
+  color: #607d8b;  /* 灰色系 */
+  font-size: 0.875rem;
+  margin-top: 8px;  /* 上の要素との間隔 */
+}
+
     /* ヘッダーを固定 */
 header {
   position: sticky;
@@ -216,34 +247,33 @@ section {
         renderVideoList(filtered);
       }
 
-      function renderVideoList(videos) {
-        videoList.innerHTML = '';
+function renderVideoList(videos) {
+  videoList.innerHTML = ''; // 既存のリストをリセット
 
-        videos.forEach(video => {
-          const item = document.createElement('div');
-          item.className = 'flex flex-col gap-2 py-4 px-4 transition-all duration-300 hover:bg-gray-50 border border-gray-300 rounded-lg';  // リストアイテムに余白を追加
+  videos.forEach(video => {
+    const item = document.createElement('div');
+    item.className = 'flex justify-between items-center gap-4 p-4 mb-4 bg-blue-100 border border-blue-300 rounded-lg shadow-md';  // 背景色・枠線・余白追加
 
+    const info = document.createElement('div');
+    info.className = 'flex flex-col';
 
-          const info = document.createElement('div');
-          info.className = 'flex-1';
+    const title = document.createElement('a');
+    title.href = "#";
+    title.className = 'text-xl font-semibold text-blue-800 hover:underline';  // 曲名を大きく、色を調整
+    title.textContent = `${video["title"]} / ${video["artist"]}`;
+    title.onclick = e => {
+      e.preventDefault();
+      loadVideo(video, item);  // 動画クリック時に再生
+    };
 
-          const title = document.createElement('a');
-          title.href = "#";
-          title.className = 'text-blue-600 font-semibold hover:underline';
-          title.textContent = `${video["title"]} - ${video["artist"]}`;
-          title.onclick = e => {
-            e.preventDefault();
-            loadVideo(video, item);
-          };
+    const meta = document.createElement('div');
+    meta.className = 'text-sm text-gray-600 mt-2';  // 詳細情報のフォント
+    meta.innerHTML = `${video["カテゴリ"]} / ${video["公開日"]} / ${video["動画種別"]} / ${video["担当区分"]}`;
 
-          const meta = document.createElement('div');
-          meta.className = 'text-sm text-gray-500';
-          meta.innerHTML = `${video["カテゴリ"]} / ${video["公開日"]} / ${video["動画種別"]} / ${video["担当区分"]}`;
+    info.appendChild(title);
+    info.appendChild(meta);
+    item.appendChild(info);
 
-
-          info.appendChild(title);
-          info.appendChild(meta);
-          item.appendChild(info);
 
               // 現在再生中の曲を強調表示
     const nowPlayingTitle = document.getElementById('nowPlayingTitle').textContent;
