--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 /* 詳細情報のスタイル */
 #videoList .text-sm {
-  color: #607d8b;  /* 灰色系 */
+  color: #202020;  /* 灰色系 */
   font-size: 0.875rem;
   margin-top: 8px;  /* 上の要素との間隔 */
 }
