--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function renderVideoList(videos) {
   videos.forEach(video => {
     // リスト項目に枠線を追加
     const item = document.createElement('div');
-    item.className = 'flex justify-between items-center gap-4 p-4 mb-4 bg-blue-100 border-2 border-blue-300 rounded-lg shadow-md';  // 枠線はitemにだけ適用
+    item.className = 'flex justify-between items-center gap-4 p-4 mb-4 bg-blue-100 rounded-lg shadow-md';  // 枠線はitemにだけ適用
 
     const info = document.createElement('div');
     info.className = 'flex flex-1 justify-between items-center';  // 横並びに配置
