--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   display: flex;
   justify-content: space-between;  /* 左右に情報を配置 */
   align-items: center;  /* 垂直方向のセンタリング */
+
+  flex-basis: 300px;  /* 基本の幅を300pxに設定 */
+  flex-grow: 0;  /* 幅が広がらないように設定 */
+  flex-shrink: 0;  /* 幅が縮まらないように設定 */
 }
 
 /* 曲名とアーティスト名 */
