--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
 
 /* リスト項目のスタイル */
 #videoList div {
-  background-color: #e0f7fa;  /* 淡い青色 */
-  border-radius: 8px;  /* 角を丸める */
+  background-color: #e0f7fa;
+  border-radius: 8px;
   padding: 10px;
-  margin-bottom: 5px;  /* 各項目の下に余白 */
+  margin-bottom: 5px;
   display: flex;
-  justify-content: space-between;  /* 左右に情報を配置 */
-  align-items: center;  /* 垂直方向のセンタリング */
+  justify-content: space-between;
+  align-items: center;
 
-  flex-basis: 300px;  /* 基本の幅を300pxに設定 */
-  flex-grow: 0;  /* 幅が広がらないように設定 */
-  flex-shrink: 0;  /* 幅が縮まらないように設定 */
+  flex-basis: 300px;
+  flex-grow: 0;
+  flex-shrink: 0;
+
+  height: 100px;  /* 高さを100pxに指定 */
 }
 
 /* 曲名とアーティスト名 */
