--- a/index.html
+++ b/index.html
@@ -33,34 +33,24 @@
   padding: 10px;
   margin-bottom: 5px;
   display: flex;
-  justify-content: space-between;  /* 左右に情報を配置 */
-  align-items: center;  /* 垂直方向のセンタリング */
-  width: 100%;
+  justify-content: space-between;  /* 曲名とアーティスト名を左側、詳細情報を右側 */
+  align-items: flex-start;  /* 垂直方向のセンタリングを解除して上に揃える */
+  width: 100%;  /* 親要素の幅に合わせて広がる */
   box-sizing: border-box;
 }
 
 /* 曲名とアーティスト名のスタイル */
-#videoList div .text-xl {
-  font-size: 1.25rem;  /* 曲名のフォントサイズ */
-  font-weight: 600;
-  color: #00796b;
-}
-
-#videoList div .text-sm {
-  font-size: 0.875rem;  /* アーティスト名のフォントサイズ */
-  color: #607d8b;
-}
-
-/* 曲名とアーティスト名は縦に並べる */
 #videoList div > div {
   display: flex;
   flex-direction: column;  /* 縦に並べる */
   justify-content: flex-start;
   align-items: flex-start;
+  width: 70%;  /* 曲名とアーティスト名の領域が親要素の70%を占める */
 }
 
-/* 詳細情報は右側に配置 */
+/* 詳細情報のスタイル */
 #videoList div > div:last-child {
+  width: 30%;  /* 詳細情報は親要素の30%を占める */
   margin-left: 20px;  /* 詳細情報と曲名/アーティストの間隔を広げる */
 }
 
