--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   margin-bottom: 5px;
   display: flex;
   justify-content: space-between;  /* 曲名とアーティスト名を左側、詳細情報を右側 */
-  align-items: flex-start;  /* 垂直方向のセンタリングを解除して上に揃える */
+  align-items: center;  /* 垂直方向のセンタリングを解除して上に揃える */
   width: 100%;  /* 親要素の幅に合わせて広がる */
   box-sizing: border-box;
 }
