--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 #videoList div > div:last-child {
   width: 30%;  /* 詳細情報は親要素の30%を占める */
   margin-left: 20px;  /* 詳細情報と曲名/アーティストの間隔を広げる */
+  display: flex;
+  justify-content: flex-start;  /* 詳細情報を左揃え */
 }
 
 #videoList a:hover {
