--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   display: flex;
   justify-content: space-between;  /* 曲名とアーティスト名を左側、詳細情報を右側 */
   align-items: center;  /* 垂直方向のセンタリングを解除して上に揃える */
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -45,6 +46,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-grow: 1;  /* 要素が広がりすぎないように調整 */
+  width: 70%;  /* 変更: 曲名とアーティスト名の幅を70%に指定 */
 }
 
 /* 詳細情報のスタイル */
@@ -52,6 +54,7 @@
   margin-left: 20px;  /* 詳細情報と曲名/アーティストの間隔を広げる */
   display: flex;
   justify-content: flex-start;  /* 詳細情報を左揃え */
+  width: 30%;  /* 変更: 詳細情報は親要素の30%を占める */
 }
 
 #videoList a:hover {
