--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@ function renderVideoList(videos) {
     meta.className = 'text-sm text-gray-600';  // 詳細情報のフォント
     meta.innerHTML = `${video["カテゴリ"]} / ${video["公開日"]} / ${video["動画種別"]} / ${video["担当区分"]}`;
 
-    info.appendChild(title);  // 曲名を追加
-    info.appendChild(artist); // アーティスト名を追加
-    item.appendChild(info);
-    item.appendChild(meta);   // 詳細情報（右側に配置される）
+    item.appendChild(title);  // 曲名を追加
+    item.appendChild(artist); // アーティスト名を追加
+    info.appendChild(info);
+    info.appendChild(meta);   // 詳細情報（右側に配置される）
   
               // 現在再生中の曲を強調表示
     const nowPlayingTitle = document.getElementById('nowPlayingTitle').textContent;
