--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ section {
       <select id="roleFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">担当区分</option>
       </select>
-      <input id="searchInput" type="text" placeholder="曲名・アーティスト" class="col-span-1 sm:col-span-2 rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200" />
+      <input id="searchInput" type="text" placeholder="曲名・アーティスト" class="col-span-1 sm:col-span-2 rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
       <select id="sortOrder" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="desc">新しい順</option>
         <option value="asc">古い順</option>
