--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ section {
   </header>
 
   <section class="max-w-4xl mx-auto mt-6 px-4">
+    <h2 class="text-xl font-semibold text-gray-800">動画リスト</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3">
       <select id="categoryFilter" class="rounded-md border border-gray-300 px-3 py-2 text-sm focus:ring-blue-300 transition duration-200">
         <option value="">カテゴリ</option>
