--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ function renderVideoList(videos) {
     item.style.border = '2px solid #00796b';  // itemにだけ枠線を設定
 
     const info = document.createElement('div');
-    info.className = 'flex flex-col flex-1';
+    info.className = 'grid grid-cols-2 gap-x-4 gap-y-1 items-start';
 
     const title = document.createElement('a');
     title.href = "#";
